# websurfx

./: .cspell.json  .dockerignore  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .mega-linter.yml  .mergify.yml  .rusty-hook.toml  .stylelintrc.json  CONTRIBUTING.md  CONTRIBUTING.org  Cargo.toml  Dockerfile  LICENSE  README.md  README.org  SECURITY.md  build.rs  dev.Dockerfile  dev.docker-compose.yml  docker-compose.yml  flake.nix  goals.org  prod.docker-compose.yml
.cargo/: config
.github/: CODE_OF_CONDUCT.md  dependabot.yml  label-actions.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.md  config.yml  docs.yml  engine-request.md  engine.yml  feature.yml  feature_request.md  other.yml
.github/workflows/: clippy.yml  contributors.yml  docker.yml  hello.yml  issue-lock-unlock.yml  labels.yml  mega-linter.yml  merge-gatekeeper.yml  pr_labeler.yml  release.yml  releases.yml  rust.yml  rust_cache.yml  rust_format.yml  rustfmt.yml  stale.yml
docs/: README.md  building.md  configuration.md  developing.md  faq.md  features.md  installation.md  instances.md  introduction.md  theming.md
public/: robots.txt
public/static/: cookies.js  error_box.js  index.js  pagination.js  search_area_options.js  settings.js  style.css  ui_plugins.js
public/static/animations/: simple-frosted-glow.css
public/static/colorschemes/: arctic-basalt.css  catppuccin-mocha.css  dark-chocolate.css  dracula.css  gruvbox-dark.css  monokai.css  nord.css  oceanic-next.css  one-dark.css  rose-pine-dawn.css  rose-pine-moon.css  rose-pine.css  solarized-dark.css  solarized-light.css  tokyo-night.css  tomorrow-night.css
public/static/themes/: simple.css
public/templates/: 404.html  about.html  bar.html  cookies_tab.html  engines_tab.html  footer.html  general_tab.html  header.html  header_search.html  index.html  navbar.html  navbar_search.html  search.html  search_bar.html  settings.html  user_interface_tab.html
src/: engine.rs  lib.rs
src/cache/: cacher.rs  encryption.rs  error.rs  mod.rs  redis_cacher.rs
src/config/: caching.rs  json.rs  lua.rs  mod.rs  parser.rs  parser_models.rs  search.rs  server.rs  style.rs
src/config_parser/: parser.rs  parser_models.rs
src/engines/: bing.rs  brave.rs  duckduckgo.rs  engine_models.rs  librex.rs  mod.rs  mojeek.rs  qwant.rs  search_result_parser.rs  searx.rs  startpage.rs
src/handler/: mod.rs  paths.rs  public_path_handler.rs  public_paths.rs
src/models/: aggregation_models.rs  client_models.rs  engine_models.rs  mod.rs  parser_models.rs  server_models.rs
src/results/: aggregation_models.rs  aggregator.rs  mod.rs  user_agent.rs
src/search_results_handler/: aggregation_models.rs  aggregator.rs  mod.rs  user_agent.rs
src/server/: mod.rs  router.rs  routes.rs
src/server/routes/: mod.rs  search.rs
src/templates/: mod.rs
src/templates/partials/: bar.rs  footer.rs  header.rs  mod.rs  navbar.rs  search_bar.rs
src/templates/partials/settings_tabs/: cookies.rs  engines.rs  general.rs  mod.rs  user_interface.rs
src/templates/views/: about.rs  index.rs  mod.rs  not_found.rs  search.rs  settings.rs
src/theme_handler/: mod.rs  theme_path_handler.rs
tests/: index.rs
websurfx/: config.lua
